# snorps-fastapi-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
API/: API.py
alembic/: env.py
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/models/: core.py
