[tool.poetryone]
name = "API"
version = "0.1.0"
description = ""
authors = ["Christopher Waschke <chrisdwaschke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.17"
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
